# EDAutoPilotMKII

./: .gitignore  AGENTS.md  README.md  TODOs.md  bindings_files.py  check_bindings.py  config.example.toml  control_room.py  diagnostics.py  pyproject.toml  requirements.txt  run_routine.py  scratch_cv.py  scratch_market.py  set_binding.py  ship_controls.py  speak.py  view_bindings.py
.github/workflows/: promote-dev-to-main.yml  tests.yml
archive/legacy-windows/: README.md
defaults/: error_messages.yaml  messages.yaml  tts.toml
docs/: README.md  STATUS.md  iteration-archive.md  session-log.md  status-archive.md
docs/assets/: README.md
docs/design/: 0001-input-and-runtime-portability-notes.md
docs/devlog/: 0001-macos-mvp-kickoff.md  (+1 more)
edap/: __init__.py  actions.py  binding_editor.py  binding_lookup.py  bindings.py  bindings_inventory.py  config.py  control_room_state.py  diagnostics.py  iteration_logs.py  progress_controls.py  routines.py  runtime.py  ship_controls.py  state.py  status.py  tts.py  version.py
tests/: fakes.py  test_actions.py  test_binding_editor.py  test_binding_lookup.py  test_bindings_files_cli.py  test_check_bindings_cli.py  test_config.py  test_control_room.py  test_control_room_state.py  test_haul_loop.py  test_haul_two_way.py  test_iteration_logs.py  test_linux_input.py  test_macos_input.py  test_paths.py  test_routines.py  test_runtime.py  test_ship_controls.py  test_ship_controls_cli.py  test_speak.py  test_state.py  test_status.py  test_tts.py  test_version.py  test_windows_input.py
tools/: check_test_timing.py  iteration_logs.py
(+82 files in other folders)
